--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 body {
-  background-color: #AAA;
   color: #333;
+  margin: 0px;
 }
 
 h1, h2, h3, h4, h5 {
@@ -9,9 +9,10 @@ h1, h2, h3, h4, h5 {
   margin-bottom: 50px;
   padding: 0px;
   text-align: center;
+  color: #EFEFEF;
 }
 
 .header {
   width: 100%;
-  margin: 50px 0px;
+  padding: 50px 0px;
 }
