--- a/css/main.css
+++ b/css/main.css
@@ -13,13 +13,16 @@ h1, h2, h3, h4, h5 {
 }
 
 .body {
-  min-width: 1000px;
-  max-width: 1200px;
   background-color: #FEFEFE;
+  margin: 0px auto;
 }
 
 .header {
   width: 100%;
   padding: 50px 0px;
   background-color: #223366;
+}
+
+.border {
+  border: 1px solid #AAAAAA;
 }
